--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <!-- REV: try putting a flash loop here for your notifications -->
 <%= yield %>
 
 </body>
